Feat: Add components of hydro system in html page

--- a/hydropower.html
+++ b/hydropower.html
@@ -62,6 +62,81 @@
             <div>
             </div>
         </section>
+        <!--Components of selected system-->
+        <section id="hydro-system-components">
+            <div class="title-center make-title-bolder top-bottom-margin">
+                <h2>Hydropower Components</h2>
+            </div>
+            <!--table with two columns part on left description on the right-->
+            <div id="components-container">
+                <div>
+                    <table id="components-table">
+                        <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
+                        <thead>
+                            <tr>
+                                <td>Element</td>
+                                <td>Description</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Dam Crest</td>
+                                <td>The top of the dam, where water is impounded. 
+                                    The crest is designed to withstand 
+                                    the water pressure and other loads.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Spillway (Emergency channel)</td>
+                                <td>An engineered structure that allows excess 
+                                    water to flow safely over or around the dam
+                                    during periods of heavy rainfall or flooding. 
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Abutments</td>
+                                <td>he natural terrain or constructed structures
+                                    on the sides of the dam that support and anchor it.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Foundation</td>
+                                <td>The base on which the dam rests. It must be
+                                    stable and able to withstand the forces 
+                                    exerted by the dam and the water it holds.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Upstream Face</td>
+                                <td>he side of the dam facing the reservoir. 
+                                    It is designed to withstand the water pressure
+                                     and is often more massive than the downstream face.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Downstream Face</td>
+                                <td>The side of the dam facing away from the reservoir.
+                                    It is typically sloped and may be less massive than
+                                    the upstream face.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Reservoir</td>
+                                <td>The body of water created by the dam, used
+                                     for various purposes like water supply, recreation, 
+                                     or hydroelectric power generation.
+                                    </td>
+                            </tr>
+                            <tr>
+                                <td>Access Roads and Maintenance</td>
+                                <td>For accessing the dam for inspections, maintenance, and emergency response.
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
