Fix: changing some css classes, correcting typos

--- a/hydropower.html
+++ b/hydropower.html
@@ -68,7 +68,7 @@
                 <h2>Hydropower Components</h2>
             </div>
             <!--table with two columns part on left description on the right-->
-            <div id="components-container">
+            <div id="hydro-components-container">
                 <div>
                     <table id="components-table">
                         <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
@@ -95,7 +95,7 @@
                             </tr>
                             <tr>
                                 <td>Abutments</td>
-                                <td>he natural terrain or constructed structures
+                                <td>The natural terrain or constructed structures
                                     on the sides of the dam that support and anchor it.
                                 </td>
                             </tr>
@@ -108,9 +108,9 @@
                             </tr>
                             <tr>
                                 <td>Upstream Face</td>
-                                <td>he side of the dam facing the reservoir. 
+                                <td>The side of the dam facing the reservoir. 
                                     It is designed to withstand the water pressure
-                                     and is often more massive than the downstream face.
+                                    and is often more massive than the downstream face.
                                 </td>
                             </tr>
                             <tr>
@@ -122,14 +122,16 @@
                             </tr>
                             <tr>
                                 <td>Reservoir</td>
-                                <td>The body of water created by the dam, used
-                                     for various purposes like water supply, recreation, 
-                                     or hydroelectric power generation.
-                                    </td>
+                                <td>
+                                    The body of water created by the dam, used
+                                    for various purposes like water supply, recreation, 
+                                    or hydroelectric power generation.
+                                </td>
                             </tr>
                             <tr>
                                 <td>Access Roads and Maintenance</td>
-                                <td>For accessing the dam for inspections, maintenance, and emergency response.
+                                <td>For accessing the dam for inspections, maintenance,
+                                    and emergency response.
                                 </td>
                             </tr>
                         </tbody>
