--- a/solar.html
+++ b/solar.html
@@ -51,7 +51,7 @@
             </div>
         </section>
         <!--how it works?-->
-        <section id="how-it-works">
+        <section id="solar-how-it-works">
             <div class="title-center make-title-bolder top-bottom-margin">
                 <h2>How it work?</h2>
             </div>
@@ -67,15 +67,16 @@
             </div>
         </section>
         <!--Components of selected system-->
-        <section id="system-components">
+        <section id="solar-system-components">
             <div class="title-center make-title-bolder top-bottom-margin">
                 <h2>Solar System Components</h2>
             </div>
             <!--table with two columns part on left description on the right-->
-            <div id="components-container">
+            <div id="solar-components-container">
                 <div>
                     <h3 class="text-center photovoltaic-system">A - Photovoltaic (PV) systems</h3>
                     <table id="components-table">
+                        <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
                         <thead>
                             <tr>
                                 <td>Element</td>
@@ -121,8 +122,8 @@
                                 <td>Real-time data on the solar energy system's operation,
                                     including energy generation, system efficiency, and
                                     possible problems, is provided by monitoring devices.
-                                    Control systems can automate specific tasks to maximise energy harvesting and system
-                                    efficiency.
+                                    Control systems can automate specific tasks to maximise
+                                    energy harvesting and system efficiency.
                                 </td>
                             </tr>
                         </tbody>
@@ -131,6 +132,7 @@
                 <div>
                     <h3 class="text-center thermal-system">B - Solar thermal systems</h3>
                     <table id="components-table">
+                        <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
                         <thead>
                             <tr>
                                 <td>Element</td>
@@ -145,7 +147,7 @@
                                     and convert it into heat. These collectors
                                     come in various types, including flat-plate
                                     collectors, concentrating collectors, and evacuated
-                                    tube collectors
+                                    tube collectors.
                                 </td>
                             </tr>
                             <tr>
@@ -154,7 +156,7 @@
                                     transfers the heat collected by the solar thermal
                                     collectors to a fluid, typically water or a heat-transfer
                                     fluid. This heated fluid is then used for various applications,
-                                    such as space heating or generating steam for electricity production
+                                    such as space heating or generating steam for electricity production.
                                 </td>
                             </tr>
                             <tr>
