--- a/wind.html
+++ b/wind.html
@@ -51,7 +51,7 @@
             </div>
         </section>
         <!--how it works?-->
-        <section id="how-it-works">
+        <section id="wind-how-it-works">
             <div class="title-center make-title-bolder top-bottom-margin">
                 <h2>How it work?</h2>
             </div>
@@ -69,7 +69,7 @@
                 <h2>Wind Turbine Components</h2>
             </div>
             <!--table with two columns part on left description on the right-->
-            <div id="components-container">
+            <div id="wind-components-container">
                 <div>
                     <table id="components-table">
                         <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
@@ -123,7 +123,7 @@
                                 <td>Brakes</td>
                                 <td>Mechanical or electrical brakes are installed
                                     to stop the rotor in case of emergencies or during 
-                                    maintenance
+                                    maintenance.
                                 </td>
                             </tr>
                         </tbody>
