Fix: correcting some typos in the index html page

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                     <li>Lower Energy Costs</li>
                     <li>Resource Conservation</li>
                     <li>Resilience to Climate Change</li>
-                    <li>Renewable Resources:</li>
+                    <li>Renewable Resources</li>
                 </ul>
             </div>
             <div id="application-fields">
-                <h2 class="title-center make-title-bolder">Application Fields includex </h2>
+                <h2 class="title-center make-title-bolder">Application Fields include </h2>
                 <ul class="reasons-and-applications">
                     <li>Industrial Processes</li>
                     <li>Industrial Processes</li>
