Feat: Add join us form to join-us page

--- a/joinus.html
+++ b/joinus.html
@@ -50,6 +50,40 @@
                 <p>Together to enhance and encourage more use of green, sustainable and renewable energy</p>
             </div>
         </section>
+        <section id="joinus">
+            <form id="joinus-form" action="https://formdump.codeinstitute.net/" method="post">
+                <h2>
+                    <i class="fa-solid fa-people-group">
+                        Be part of our team
+                    </i>
+                </h2>
+                <div>
+                    <label for="firstname">Firstname</label>
+                    <input type="text" id="firstname" name="first_name" required>
+                    <br>
+                    <label for="lastname">Lastname</label>
+                    <input type="text" id="lastname" name="last_name" required>
+                    <br>
+                    <label for="emailaddress">Email address</label>
+                    <input type="text" id="emailaddress" name="email_address" required>
+                </div>
+                <div>
+                    <div>
+                        <input type="radio" id="solar" name="clean_energy_form" value="solar">
+                        <label for="solar">Solar Energy</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="wind" name="clean_energy_form" value="wind">
+                        <label for="wind">Wind Energy</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="hydro" name="clean_energy_form" value="hydro">
+                        <label for="hydro">Solar Energy</label>
+                    </div>
+                </div>
+                <button type="submit" class="join-us">Join us</button>
+            </form>
+        </section>
     </main>
 
     <!--Footer-->
