Feat:Adding style to the join us form and make it responsive

--- a/joinus.html
+++ b/joinus.html
@@ -56,7 +56,7 @@
                     <i class="fa-solid fa-people-group"></i>
                     Be part of our team
                 </h2>
-                <div>
+                <div class="personal-data">
                     <fieldset>
                         <legend>Your detail</legend>
                         <label for="firstname">Firstname</label>
@@ -67,25 +67,28 @@
                         <input type="text" id="emailaddress" name="email_address" required>
                     </fieldset>
                 </div>
-                <div>
+                <div class="radio-buttons">
                     <fieldset>
                         <legend>Energy Source Preference</legend>
                         <div>
                             <input type="radio" id="solar" name="clean_energy_form" value="solar">
-                            <label for="solar">Solar Energy</label>
+                            <label for="solar">Solar</label>
                         </div>
                         <div>
                             <input type="radio" id="wind" name="clean_energy_form" value="wind" checked>
-                            <label for="wind">Wind Energy</label>
+                            <label for="wind">Wind</label>
                         </div>
                         <div>
                             <input type="radio" id="hydro" name="clean_energy_form" value="hydro">
-                            <label for="hydro">Solar Energy</label>
+                            <label for="hydro">hydropower</label>
                         </div>
                     </fieldset>
 
                 </div>
-                <button type="submit" class="join-us">Join us</button>
+                <div class="btn-container">
+                    <button type="submit" class="join-us">Join us</button>
+                </div>
+                
             </form>
         </section>
     </main>
