--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="index.html" class="active-page">Clean-Energy</a></li>
                 <li><a href="solar.html">Solar</a></li>
                 <li><a href="wind.html">Wind</a></li>
-                <li><a href="hydropower.html">Hydro</a></li>
+                <li><a href="hydropower.html">Hydropower</a></li>
                 <li><a href="joinus.html">Join us</a></li>
             </ul>
         </nav>
