Fix: solar html page contains two elements with same ID, I change it into a class since they share same style

--- a/solar.html
+++ b/solar.html
@@ -75,7 +75,7 @@
             <div id="solar-components-container">
                 <div>
                     <h3 class="text-center photovoltaic-system">A - Photovoltaic (PV) systems</h3>
-                    <table id="components-table">
+                    <table class="components-table">
                         <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
                         <thead>
                             <tr>
@@ -131,7 +131,7 @@
                 </div>
                 <div>
                     <h3 class="text-center thermal-system">B - Solar thermal systems</h3>
-                    <table id="components-table">
+                    <table class="components-table">
                         <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
                         <thead>
                             <tr>
