Fix: Reconstructing home page to achieve more contrast

--- a/index.html
+++ b/index.html
@@ -51,31 +51,41 @@
             </div>
         </section>
         <!--clean energy sources-->
-        <section id="clean-energy-sources">
+        <!--clean energy sources-->
+        <section>
             <div>
                 <h2 class="title-center make-title-bolder top-bottom-margin">Clean Energy Sources</h2>
             </div>
-            <div id="energy-sources-container">
-                <div class="solar-en-circle">
+            <div class="energy-sources">
+
+                <div class="source-wrapper solar-bg">
                     <a href="solar.html" class="source-clickable">
-                        <h3 class="source-title">Solar</h3>
+                        <div class="wrapper-content">
+                            <h3 class="source-title">Solar</h3>
+                            <p class="normal-txt show-hover">Harvesting sunlight, powering tomorrow</p>
+                            <span class="read-more-btn">Read more</span>
+                        </div>
                     </a>
-                    <p class="normal-txt">Harvesting sunlight, powering tomorrow</p>
-                    <a href="solar.html" class="sources-read-more-btn">Read more</a>
                 </div>
-                <div class="wind-en-circle">
+
+                <div class="source-wrapper wind-bg">
                     <a href="wind.html" class="source-clickable">
-                        <h3 class="source-title">Wind</h3>
+                        <div class="wrapper-content">
+                            <h3 class="source-title">Wind</h3>
+                            <p class="normal-txt  show-hover">Capturing wind's power with turbines</p>
+                            <span class="read-more-btn">Read more</span>
+                        </div>
                     </a>
-                    <p class="normal-txt">Capturing wind's power with turbines</p>
-                    <a href="wind.html" class="sources-read-more-btn">Read more</a>
                 </div>
-                <div class="hydropower-en-circle">
+
+                <div class="source-wrapper hydropower-bg">
                     <a href="hydropower.html" class="source-clickable">
-                        <h3 class="source-title">Hydro</h3>
+                        <div class="wrapper-content">
+                            <h3 class="source-title">Hydro</h3>
+                            <p class="normal-txt show-hover">Nature's flow for clean hydro power</p>
+                            <span class="read-more-btn">Read more</span>
+                        </div>
                     </a>
-                    <p class="normal-txt">Nature's flow for clean hydro power</p>
-                    <a href="hydropower.html" class="sources-read-more-btn">Read more</a>
                 </div>
             </div>
         </section>
