Fix: Remove unused class source-clickable from home page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="energy-sources">
 
                 <div class="source-wrapper solar-bg">
-                    <a href="solar.html" class="source-clickable">
+                    <a href="solar.html">
                         <div class="wrapper-content">
                             <h3 class="source-title">Solar</h3>
                             <p class="normal-txt show-hover">Harvesting sunlight, powering tomorrow</p>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="source-wrapper wind-bg">
-                    <a href="wind.html" class="source-clickable">
+                    <a href="wind.html">
                         <div class="wrapper-content">
                             <h3 class="source-title">Wind</h3>
                             <p class="normal-txt  show-hover">Capturing wind's power with turbines</p>
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="source-wrapper hydropower-bg">
-                    <a href="hydropower.html" class="source-clickable">
+                    <a href="hydropower.html">
                         <div class="wrapper-content">
                             <h3 class="source-title">Hydro</h3>
                             <p class="normal-txt show-hover">Nature's flow for clean hydro power</p>
