--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <section id="clean-energy-hero-img">
             <div id="home-pg-cover-txt">
                 <h1 class="center-vertically">Clean Energy</h1>
-                <p>A more robust and environmentally friendly future is made possible by clean energy, which is sustainable, clean, renewable, and effectively utilised</p>
+                <p>A more robust and environmentally friendly future is made possible by clean energy, which is
+                    sustainable, clean, renewable, and effectively utilised</p>
             </div>
         </section>
         <!--clean energy sources-->
@@ -63,7 +64,6 @@
                         <div class="wrapper-content">
                             <h3 class="source-title">Solar</h3>
                             <p class="normal-txt show-hover">Harvesting sunlight, powering tomorrow</p>
-                            <span class="read-more-btn">Read more</span>
                         </div>
                     </a>
                 </div>
@@ -73,7 +73,6 @@
                         <div class="wrapper-content">
                             <h3 class="source-title">Wind</h3>
                             <p class="normal-txt  show-hover">Capturing wind's power with turbines</p>
-                            <span class="read-more-btn">Read more</span>
                         </div>
                     </a>
                 </div>
@@ -83,7 +82,6 @@
                         <div class="wrapper-content">
                             <h3 class="source-title">Hydro</h3>
                             <p class="normal-txt show-hover">Nature's flow for clean hydro power</p>
-                            <span class="read-more-btn">Read more</span>
                         </div>
                     </a>
                 </div>
@@ -117,9 +115,11 @@
         <section id="green-enery-video">
             <div>
                 <h2 class="title-center make-title-bolder">Which sources are the most sustainable?</h2>
-                <iframe src="https://www.youtube.com/embed/Ms--0d7Oh0s?si=i5DNVLDSFqNsPSzr" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Ms--0d7Oh0s?si=i5DNVLDSFqNsPSzr" title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
-            
+
         </section>
     </main>
 
@@ -127,23 +127,27 @@
     <footer>
         <!-- Adding social media icons from font aweosome website-->
         <ul id="social-media-links">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit facebook page (open in new page)">
-                <i class="fa-brands fa-square-facebook"></i>
-            </a></li>
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit youtube page (open in new page)">
-                <i class="fa-brands fa-square-youtube"></i>
-            </a></li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit twitter page (open in new page)">
-                <i class="fa-brands fa-square-twitter"></i>
-            </a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit instagram page (open in new page)">
-                <i class="fa-brands fa-square-instagram"></i>
-            </a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit facebook page (open in new page)">
+                    <i class="fa-brands fa-square-facebook"></i>
+                </a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit youtube page (open in new page)">
+                    <i class="fa-brands fa-square-youtube"></i>
+                </a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit twitter page (open in new page)">
+                    <i class="fa-brands fa-square-twitter"></i>
+                </a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit instagram page (open in new page)">
+                    <i class="fa-brands fa-square-instagram"></i>
+                </a></li>
         </ul>
     </footer>
 
     <!--Adding font Awesome-->
-  <script src="https://kit.fontawesome.com/176b15ee89.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/176b15ee89.js" crossorigin="anonymous"></script>
 
 </body>
 
