Fix: Adjusting the how-it-works background images in the sub-pages

--- a/solar.html
+++ b/solar.html
@@ -62,7 +62,7 @@
                 solar energy are <strong>Photovoltaic (PV) systems </strong> for electricity
                 generation and <strong>Solar thermal systems</strong> for heat production.
             </p>
-            <div class="working-mechanism-container solar-img"></div>
+            <div class="photovoltaic-bg working-mechanism-container "></div>
             <div>
             </div>
         </section>
