--- a/wind.html
+++ b/wind.html
@@ -59,7 +59,7 @@
                     of the wind into mechanical energy, which is then
                     transformed into electrical energy.
                 </p>
-                <div class="working-mechanism-container windturbine-img"></div>
+                <div class="windturbine-bg working-mechanism-container"></div>
             <div>
             </div>
         </section>
