Fix: Change the input of the email address to email instead of text

--- a/joinus.html
+++ b/joinus.html
@@ -64,7 +64,7 @@
                         <label for="lastname">Lastname</label>
                         <input type="text" id="lastname" name="last_name" required>
                         <label for="emailaddress">Email address</label>
-                        <input type="text" id="emailaddress" name="email_address" required>
+                        <input type="email" id="emailaddress" name="email_address" required>
                     </fieldset>
                 </div>
                 <div class="radio-buttons">
